--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,76 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    width: 100vw;
+}
+
+.vw-60{
+    width: 60vw;
+    min-height: 300px;
+    background-color: burlywood;
+}
+
+/* HEADER */
+header{
+    height: 500px;
+}
+
+/* UP-HEADER */
+.up-header{
+    background-color: black;
+    min-height: 20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-header > div {
+    display: inline-block;
+    min-height: 50px;
+    min-width: 100px;
+    background-color: orange;
+}
+
+.right-header > div {
+    display: inline-block;
+    min-height: 50px;
+    min-width: 100px;
+    background-color: red;
+}
+
+
+/* BOTTOM-HEADER */
+.bottom-header{
+    background-color: gray;
+    min-height: 80%;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+}
+
+.bottom-header > .vw-60 > div{
+    display: inline-block;
+}
+
+.intestazione-header{
+    width: 100%;
+    height: 100px;
+    background-color: bisque;
+}
+
+.paragrafo-header{
+    width: 30%;
+    height: 200px;
+    background-color: aquamarine;
+}
+
+.imagine-header{
+    width: 69%;
+    height: 200px;
+    background-color: gold;
+}
+/* FINE HEADER */
+
+/*  */
