--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ body{
     width: 100vw;
 }
 
+main > section{
+    padding: 20px 0;
+}
+
+.vw-80{    
+    width: 80vw;
+    min-height: 300px;
+    background-color: lightcoral;
+}
+
 .vw-60{    
     width: 60vw;
     min-height: 300px;
@@ -16,16 +26,23 @@ body{
 
 /* HEADER */
 header{
-    height: 500px;
+    min-height: 300px;
+    margin-bottom: 20px;
 }
 
 /* UP-HEADER */
 .up-header{
     background-color: black;
-    min-height: 20%;
+    width: 100vw;
+    min-height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+
 }
 
 .left-header > div {
@@ -46,14 +63,16 @@ header{
 /* BOTTOM-HEADER */
 .bottom-header{
     background-color: gray;
-    min-height: 80%;
+    min-height: 400;
     display: flex;
     justify-content: center ;
     align-items: center;
+    margin-top: 100px;
 }
 
-.bottom-header > .vw-60 > div{
+.bottom-header > .vw-80 > div{
     display: inline-block;
+    margin-top:10px;
 }
 
 .intestazione-header{
@@ -119,6 +138,7 @@ main{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .riga-uno-dropbox-business > div{
@@ -149,7 +169,7 @@ main{
 
 
 .quadrati-colorati{
-    width: 100%;
+    width: 100vw;
     height: 300px;
     display: flex;
     justify-content: space-between;
@@ -157,7 +177,7 @@ main{
 }
 
 .quadrato-grande-sx{
-    width: 100%;
+    width: calc(100% / 3);
     height: 100%;
     display: flex;
     font-size: 0;
@@ -175,7 +195,6 @@ main{
 
 .quadrato-grande-sx > div{
     display: inline-block;
-
     background-color: blue;
     border: 1px solid black;
     width: 50%;
@@ -187,7 +206,7 @@ main{
 
 
 .quadrato-grande-dx{
-    width: 100%;
+    width: calc(100% / 3);
     height: 100%;
     display: flex;
     font-size: 0;
@@ -243,6 +262,7 @@ footer{
 .up-footer{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .up-footer > div{
