--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header{
 
 /* UP-HEADER */
 .up-header{
-    background-color: black;
+    background-color: white;
     width: 100vw;
     min-height: 100px;
     display: flex;
@@ -45,52 +45,96 @@ header{
 
 }
 
+
+
 .left-header > div {
     display: inline-block;
     min-height: 50px;
-    min-width: 100px;
-    background-color: orange;
+    min-width: 50px;
+    /* background-color: orange; */
+    vertical-align: middle;
+    color: #6e6e6e;
+    margin-right: 10px;
+    padding: 5px;
+
+
 }
 
 .right-header > div {
     display: inline-block;
     min-height: 50px;
-    min-width: 100px;
-    background-color: red;
+    min-width: 50px;
+    /* background-color: red; */
+    vertical-align: middle;
+    color: #6e6e6e;
+    margin-right: 10px;
+    padding: 5px;
+
+
+
+
+}
+
+.button-header > button{
+    background-color: #0061ff;
+    color: white;
+    padding: 5px;
+    border: none;
 }
 
 
 /* BOTTOM-HEADER */
 .bottom-header{
-    background-color: gray;
+    /* background-color: gray; */
     min-height: 400;
     display: flex;
     justify-content: center ;
     align-items: center;
-    margin-top: 100px;
+    margin: 100px 0;
 }
 
 .bottom-header > .vw-80 > div{
     display: inline-block;
-    margin-top:10px;
+    margin-top: 10px;
+
+}
+
+.paragrafo-header > *{
+    margin: 10px 0;
 }
 
 .intestazione-header{
     width: 100%;
-    height: 100px;
-    background-color: bisque;
+    min-height: 50px;
+    /* background-color: bisque; */
+    font-size: 2em;
+    margin-bottom: 30px;
 }
 
 .paragrafo-header{
     width: 30%;
-    height: 200px;
-    background-color: aquamarine;
+    min-height: 200px;
+    /* background-color: aquamarine; */
+    vertical-align: top;
 }
 
+.paragrafo-header > button{
+    background-color: #0061ff;
+    color: white;
+    padding: 10px;
+    border: none;
+}
+
+
+
 .imagine-header{
-    width: 69%;
-    height: 200px;
-    background-color: gold;
+    width: 65%;
+    height: 300px;
+    /* background-color: gold; */
+    background-image: url(../img/jumbo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+
 }
 /* FINE HEADER */
 
@@ -107,10 +151,12 @@ main{
 }
 
 .colonne-main > div{
-    background-color: blue;
+    /* background-color: blue; */
     width: 30%;
     min-height: 300px;
     display: inline-block;
+    border: 1px solid black;
+
 }
 
 .enterprise{
