--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,22 @@ main > section{
 }
 
 .vw-60{    
-    width: 60vw;
+    width: 70vw;
     min-height: 300px;
-    background-color: burlywood;
+    /* background-color: burlywood; */
+}
+
+.hr{
+    width: 100px;
+    color: gray;
+}
+
+
+button{
+    background-color: #0061ff;
+    color: white;
+    padding: 10px;
+    border: none;
 }
 
 /* HEADER */
@@ -118,12 +131,7 @@ header{
     vertical-align: top;
 }
 
-.paragrafo-header > button{
-    background-color: #0061ff;
-    color: white;
-    padding: 10px;
-    border: none;
-}
+
 
 
 
@@ -145,6 +153,10 @@ main{
     align-items: center;
 }
 
+.piano-business{
+    margin-bottom: 20px;
+}
+
 .colonne-main{
     display: flex;
     justify-content: space-between;
@@ -158,6 +170,36 @@ main{
     border: 1px solid black;
 
 }
+
+.contenuto-colonne > *{
+    padding: 20px 20px;
+
+}
+
+.professional > *{
+    display: block;
+    margin-top: 20px;
+}
+
+.intestazione-colonne{
+    text-align: center;
+    border-bottom: 1px solid black;
+}
+
+.fa-user{
+}
+
+.fa-check{
+    color: #0061ff;
+}
+
+
+
+
+
+
+
+
 
 .enterprise{
     min-height: 200px;
