--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ main > section{
 .vw-80{    
     width: 80vw;
     min-height: 300px;
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
 }
 
 .vw-60{    
@@ -28,6 +28,7 @@ main > section{
     width: 100px;
     color: gray;
 }
+
 
 
 button{
@@ -285,8 +286,8 @@ main{
 .riga-uno-dropbox-business > div{
     width: 30%;
     min-height: 300px;
-    background-color: darkseagreen;
-    border: 1px solid black;
+    /* background-color: darkseagreen; */
+    /* border: 1px solid black; */
 }
 
 .img-dropbox-business{
@@ -318,27 +319,25 @@ main{
 .riga-due-dropbox-business > div{
     width: 30%;
     min-height: 300px;
-    background-color: darkseagreen;
-    border: 1px solid black;
+    /* background-color: darkseagreen; */
+    /* border: 1px solid black; */
 }
 
 
 
-
-
-
-
-
-
-
-
-
+/* SCOPRI DI PIU' */
 .scopri-di-più{
-    width: 100%;
     min-height: 200px;
-    background-color: lightblue;
+    /* background-color: lightblue; */
 }
 
+.scopri-di-più > h1 {
+    padding-bottom: 30px;
+}
+
+
+
+/* QUADRATI COLORATI */
 
 .quadrati-colorati{
     width: 100vw;
@@ -348,6 +347,7 @@ main{
 
 }
 
+/* QUADRATO SX */
 .quadrato-grande-sx{
     width: calc(100% / 3);
     height: 100%;
@@ -359,7 +359,7 @@ main{
     display: inline-block;
     width: calc(100% / 3);
     height: 300px;
-    background-color: blue;
+    /* background-color: blue; */
     border: 1px solid black;
 }
 
@@ -367,14 +367,26 @@ main{
 
 .quadrato-grande-sx > div{
     display: inline-block;
-    background-color: blue;
+    /* background-color: blue; */
     border: 1px solid black;
     width: 50%;
     height: 50%;
     margin-top: 0;
 }
 
+.quadrato-piccolo-verde{
+    background-color: #a2d39b;
+    position: relative;
+}
 
+.quadrato-piccolo-verde > img{
+    position: absolute;
+    left: calc(50% - 45px);
+    top: calc(50% - 45px);
+    height: 90px;
+    width: 90px;
+    /* color: white; */
+}
 
 
 .quadrato-grande-dx{
@@ -384,7 +396,14 @@ main{
     font-size: 0;
 }
 
+/* QUADRATO CENTRALE */
 
+
+
+
+
+
+/* QUADRATO DX */
 .quadrato-grande-dx > div{
     display: inline-block;
 
