--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    width: 100vw;
+    font-family: Georgia, 'Times New Roman', Times, serif;  
 }
 
 main > section{
@@ -502,16 +502,12 @@ li{
     list-style: none;
 }
 
+.faq > hr{
+    margin: 20px 0;
+}
+
 
 /* FINE MAIN */
-
-
-
-
-
-
-
-
 
 
 
