--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;  
 }
 
-main > section{
-    padding: 20px 0;
-}
-
 .vw-80{    
     width: 80vw;
     min-height: 300px;
@@ -47,7 +43,7 @@ button{
 
 /* HEADER */
 header{
-    min-height: 300px;
+    min-height: 200px;
     margin-bottom: 20px;
 }
 
@@ -60,9 +56,10 @@ header{
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 30;
     top: 0;
     left: 0;
+    z-index: 30;
+
 
 
 }
@@ -107,7 +104,7 @@ header{
 
 /* BOTTOM-HEADER */
 .bottom-header{
-    /* background-color: gray; */
+    background-color: #b4d0e7;
     min-height: 400;
     display: flex;
     justify-content: center ;
@@ -155,6 +152,15 @@ header{
 }
 /* FINE HEADER */
 
+
+
+
+
+
+
+
+
+
 /* MAIN */
 main{
     display: flex;
@@ -167,6 +173,11 @@ main{
 .piano-business{
     margin-bottom: 20px;
 }
+
+.piano-business > *{
+    margin-bottom: 20px;
+}
+
 
 .colonne-main{
     display: flex;
@@ -189,15 +200,21 @@ main{
 
 .professional > *{
     display: block;
-    margin-top: 20px;
 }
 
 .intestazione-colonne{
-    text-align: center;
+    height: 40px;
     border-bottom: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.fa-user{
+.icone-e-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .fa-check{
@@ -206,7 +223,7 @@ main{
 
 
 
-/* CASELLA SOTTO 3 COLONNE */
+/* ENTERPRISE (CASELLA SOTTO 3 COLONNE) */
 
 .enterprise{
     min-height: 200px;
@@ -216,8 +233,13 @@ main{
 }
 
 .intestazione-casella-enterprise{
+    height: 40px;
     border-bottom: 1px solid black;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .contenuto-casella-enterprise{
@@ -225,19 +247,24 @@ main{
 
 }
 
-.prima-riga-contenuto-casella-enterprise{
+.prima-riga-contenuto-casella-enterprise > div{
     display: flex;
     justify-content: space-between;
 }
 
-.left-casella-enterprise{
-    display: flex;
-    align-items: center;
+.left-casella-enterprise > h3{
+    margin-bottom: 10px;
+}
+
+.left-casella-enterprise > h4{
+    margin-bottom: 30px;
 }
 
 .right-casella-enterprise{
+    width: 30%;
+    height: 40px;
     display: flex;
-    align-items: center;
+    justify-content: flex-end;
 }
 
 
