--- a/css/style.css
+++ b/css/style.css
@@ -499,6 +499,10 @@ main{
     position: relative;
 }
 
+.quadrato-piccolo-verde > img{
+    filter: invert();
+}
+
 .loghi-quadrati-colorati{
     position: absolute;
     left: calc(50% - 45px);
@@ -513,9 +517,17 @@ main{
     position: relative;
 }
 
+.quadrato-piccolo-bordeau > img{
+    filter: invert();
+}
+
 .quadrato-piccolo-blu{
     background-color: #0093ce;
     position: relative;
+}
+
+.quadrato-piccolo-blu > img{
+    filter: invert();
 }
 
 .quadrato-piccolo-rosso{
@@ -523,11 +535,16 @@ main{
     position: relative;
 }
 
+.quadrato-piccolo-rosso > img{
+    filter: invert();
+}
+
 
 /* QUADRATO CENTRALE */
 
 .quadrato-grande-centro{
     background-color: #f5f5f5;
+    padding: 20px 20px;
 }
 
 .immagine-quadrato-grande-centro{
@@ -565,9 +582,15 @@ main{
     margin-top: 0;
 }
 
+/* QUADRATI PICCOLI DX */
+
 .quadrato-piccolo-rosso-scuro{
     background-color: #ff1c1c;
     position: relative;
+}
+
+.quadrato-piccolo-rosso-scuro > img{
+    filter: invert();
 }
 
 .quadrato-piccolo-celeste{
@@ -575,14 +598,26 @@ main{
     position: relative;
 }
 
+.quadrato-piccolo-celeste > img{
+    filter: invert();
+}
+
 .quadrato-piccolo-blu-scuro{
     background-color: #0d2481;
     position: relative;
 }
 
+.quadrato-piccolo-blu-scuro > img{
+    filter: invert();
+}
+
 .quadrato-piccolo-giallo{
     background-color: #ffd830;
     position: relative;
+}
+
+.quadrato-piccolo-giallo > img{
+    filter: invert();
 }
 
 
@@ -592,7 +627,6 @@ main{
 .prova-gratuita{
     width: 100%;
     min-height: 200px;
-    margin-top: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -608,6 +642,7 @@ main{
 
 .faq{
     min-height: 200px;
+    margin: 100px;
     /* background-color: GREEN; */
 }
 
