--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,7 @@ footer{
 .up-footer{
     display: flex;
     justify-content: space-between;
-    margin: 40px 0;
+    margin-top: 100px;
 }
 
 .up-footer > div{
@@ -687,12 +687,6 @@ footer{
     border: 1px solid black;
 }
 
-.bottom-footer{
-    min-height: 100px;
-    /* background-color: brown; */
-    margin-top: 40px;
-}
-
 .up-footer > div > h3{
     margin-bottom: 20px;
 }
@@ -700,6 +694,13 @@ footer{
 .up-footer > div > ul > li{
     font-size: 12px;
     margin: 10px 0;
+}
+
+.bottom-footer{
+    min-height: 100px;
+    /* background-color: brown; */
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 
