--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ main{
 }
 
 .contenuto-colonne > *{
-    padding: 20px 20px;
+    padding: 20px;
 
 }
 
@@ -296,12 +296,18 @@ main{
 .icon-share-colonne{
     display: flex;
     justify-content: space-around;
-
 }
 
 .icon-share-colonne > :first-child{
     margin-right: 5px;    
 }
+
+.icon-v-text{
+    display: flex ;
+    justify-content: flex-start;
+    margin-top: 20px ;
+}
+
 
 
 
